--- a/gb/21/9/6/n13212851.md
+++ b/gb/21/9/6/n13212851.md
@@ -1,62 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tdqfzt3033/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tdqfzt3033/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tdqfzt3033/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵艺术卓越 豪宅设计公司老板：可喜可贺</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13212862-2109051628532153-600x400.jpg" />
 <h6>2021年9月5日下午，企业老板Deb Primera和丈夫一起观赏了神韵北美艺术团在德州理查森艾思曼中心的第三场演出。（文烨／大纪元）                           
 </h6>
 <hr>
-	<p>【大纪元2021年09月06日讯】（大纪元记者文烨美国理查森报导）2021年9月5日下午，<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E%E7%90%86%E6%9F%A5%E6%A3%AE%E8%89%BE%E6%80%9D%E6%9B%BC%E4%B8%AD%E5%BF%83.md#1">德州理查森艾思曼中心</a>（RICHARDSON Eisemann Center）笑声连连、掌声不断，<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>团的第三场演出再度为观众献上精彩纷呈的顶级艺术盛宴，企业老板Deb Primera和丈夫一起观赏后，对神韵满怀感恩，并送上衷心的祝贺。</p>
+	<p>【大纪元2021年09月06日讯】（大纪元记者文烨美国理查森报导）2021年9月5日下午，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E%E7%90%86%E6%9F%A5%E6%A3%AE%E8%89%BE%E6%80%9D%E6%9B%BC%E4%B8%AD%E5%BF%83.md#1">德州理查森艾思曼中心</a>（RICHARDSON Eisemann Center）笑声连连、掌声不断，<ahref="http://ShenYunPerformingArts.org" rel="noopener" target="_blank">神韵北美艺术团</a>的第三场演出再度为观众献上精彩纷呈的顶级<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>盛宴，企业老板Deb Primera和丈夫一起观赏后，对<ahref="http://ShenYun.com" rel="noopener" target="_blank">神韵</a>满怀感恩，并送上衷心的祝贺。</p>
 <p>Primera是德州知名豪宅室内设计公司的创办人，也是华盛顿特区HGTV电视节目的设计师和特约撰稿人，其设计业务横跨全美与海外。</p>
-<p>“演出无可挑剔，整台<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>（造诣）杰出卓越，可喜可贺！”Deb对<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的成功大加赞赏，“演出非凡出色，舞台绚丽多彩，演绎的故事生动传神，我们从中能领会所发生的一切故事，真是精彩绝伦。”</p>
-<p>Deb的丈夫Jose Primera是美国司法部的联邦培训讲师，在华盛顿特区司法管理部门的首席信息官办公室工作。他十分赞同妻子的看法，“演出非常美妙，所有元素都制作得相当精美，演员表现极为出色，无论<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E6%BC%94%E5%91%98.md#1">舞蹈演员</a>还是音乐家。管弦乐团也是如此，令我兴奋激动，我非常喜爱这场演出。”</p>
+<p>“演出无可挑剔，整台<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>（造诣）杰出卓越，可喜可贺！”Deb对<ahref="https://twitter.com/ShenYun" rel="noopener" target="_blank">神韵</a>的成功大加赞赏，“演出非凡出色，舞台绚丽多彩，演绎的故事生动传神，我们从中能领会所发生的一切故事，真是精彩绝伦。”</p>
+<h2><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>所有元素制作精美</h2>
+<p>Deb的丈夫Jose Primera是美国司法部的联邦培训讲师，在华盛顿特区司法管理部门的首席信息官办公室工作。他十分赞同妻子的看法，“演出非常美妙，所有元素都制作得相当精美，演员表现极为出色，无论<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E6%BC%94%E5%91%98.md#1">舞蹈演员</a>还是音乐家。管弦乐团也是如此，令我兴奋激动，我非常喜爱这场演出。”</p>
 <p>他表示，充满阳刚之气的男子舞蹈令他心生向往，“看起来很像功夫，像某种东方类型的格斗，让我心潮澎湃。”</p>
 <p>话音刚落，太太Deb也忍不住开心笑起来，她由衷赞佩说，“无论是男子还是女子演员，每个人都那么高贵优雅，他们经历了反复训练，真的很感激他们的付出。”</p>
-<p>第一次欣赏神韵，Deb除了丈夫，还带来了一帮朋友，有来自马来西亚的也有奥斯汀的。她表示欣赏亚裔文化，朋友的到来有助于了解故事背景，以及当代中国人所面临的信仰等危机。</p>
-<p>对神韵演员为复兴被中共破坏的中国传统文化的不懈努力，Deb认为“应该这样做”，并“期待神韵在复兴这种（传统）文化方面取得巨大成功”。</p>
-<p>责任编辑：夏晶</p>
+<p>第一次欣赏<ahref="https://www.facebook.com/ShenYunPerformingArts/" rel="noopener" target="_blank">神韵</a>，Deb除了丈夫，还带来了一帮朋友，有来自马来西亚的也有奥斯汀的。她表示欣赏亚裔文化，朋友的到来有助于了解故事背景，以及当代中国人所面临的信仰等危机。</p>
+<p>对<ahref="https://www.youtube.com/c/shenyun" rel="noopener" target="_blank">神韵演员</a>为复兴被中共破坏的中国传统文化的不懈努力，Deb认为“应该这样做”，并“期待<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>在复兴这种（传统）文化方面取得巨大成功”。</p>
+<p><span style="color: #800080;">神韵官方网站</span>：<ahref="http://ShenYunPerformingArts.org" target="_blank" rel="noopener noreferrer">ShenYunPerformingArts.org</a><br />
+<span style="color: #800080;">Youtube神韵官方频道</span>： <ahref="https://www.youtube.com/c/shenyun" target="_blank" rel="noopener noreferrer">https://www.youtube.com/c/shenyun</a></p>
+<p>责任编辑：夏晶#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/20/1/13/n11789740.md#1">神韵优美至极 销售经理夫妇赞全新体验</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/5/n13211090.md#1">企业老板夫妇观神韵 赞传统中国充满活力</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/5/n13211349.md#1">神韵演出富有表现力 电气公司老板赞叹</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/5/n13211355.md#1">神韵传达神的引导 跨国企业副总裁深受感动</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/5/n13211427.md#1">跨国公司副总裁观神韵 钦佩演员才华与付出</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/5/n13211497.md#1">神韵舞蹈呈现历史 跨国公司信息官叹为观止</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/13/n11789740.md#1">神韵优美至极 销售经理夫妇赞全新体验</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211090.md#1">企业老板夫妇观神韵 赞传统中国充满活力</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211349.md#1">神韵演出富有表现力 电气公司老板赞叹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211355.md#1">神韵传达神的引导 跨国企业副总裁深受感动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211427.md#1">跨国公司副总裁观神韵 钦佩演员才华与付出</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/5/n13211497.md#1">神韵舞蹈呈现历史 跨国公司信息官叹为观止</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/28/n13194661.md#1">【未解之谜】不可思议的撞脸 是转世还是巧合？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210934.md#1">【财商天下】北京调控过猛 楼市有大危机</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208120.md#1">【珍言真语】周小龙：议员未尽职 艺术中心受打压</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/5/n13211828.md#1">【马克时空】中共威胁台湾 日本获美松绑 将成为军事强国</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13207021.md#1">赵薇“幕后总指挥”曝光？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206414.md#1">北大经济学教授罕见警告：走向“共同贫穷”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208868.md#1">为何近年只当厨师不拍电影？谢霆锋感伤回应</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206073.md#1">黄秋生庆60岁生日 杜汶泽祝“好人一生平安”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210581.md#1">以色列成疫情惨重国 疫苗防疫有6大问题</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/1/n13201822.md#1">远离失智、忧郁症！研究揭最佳睡眠时间</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210320.md#1">一个常见烹饪错误 让你胆固醇升高</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13205789.md#1">生活中处处藏毒素 黑豆、绿豆加1物解百毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tdqfzt3033/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tdqfzt3033/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/6/n13212851.htm">神韵艺术卓越 豪宅设计公司老板：可喜可贺</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/6/n13212851.htm">神韵艺术卓越 豪宅设计公司老板：可喜可贺</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/6/n13212851.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tdqfzt3033/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tdqfzt3033/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/6/n13212851.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
